@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.416 2019/07/31 13:17:00 brook Exp $
+# $NetBSD: Makefile,v 1.417 2019/07/31 13:19:37 brook Exp $
 
 COMMENT=	Mathematics
 
@@ -47,6 +47,7 @@ SUBDIR+=	R-e1071
 SUBDIR+=	R-ellipsis
 SUBDIR+=	R-emdbook
 SUBDIR+=	R-estimability
+SUBDIR+=	R-forcats
 SUBDIR+=	R-forecast
 SUBDIR+=	R-fracdiff
 SUBDIR+=	R-gdata
