@@ -1,0 +1,5 @@
+Helpers for reordering factor levels (including moving specified
+levels to front, ordering by first appearance, reversing, and randomly
+shuffling), and tools for modifying factor levels (including
+collapsing rare levels into other, 'anonymising', and manually
+'recoding').
