@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/07/31 13:19:38 brook Exp $
+
+SHA1 (R/forcats_0.4.0.tar.gz) = 447d02be14e88804d8eabc164bc5662ea77af960
+RMD160 (R/forcats_0.4.0.tar.gz) = af9de0f515aa0ea1a096ff4d45dc65953a1242b2
+SHA512 (R/forcats_0.4.0.tar.gz) = 4b08c877a0e7bc635e13193ef710f1ccdd7f83d74a76c6c11b3ec48863bcceeb35082b623608068e18208b15b728b5ebe9af4104e8478ccfc7f04efa18255626
+Size (R/forcats_0.4.0.tar.gz) = 255097 bytes
